# edOS

./: .gitignore  CMakeLists.txt  README.md
arch/: cpu.h  structs.h
arch/arm/: arch.h  asm_inline.h  asm_inline_gcc.h  exc.h  thread.h
arch/arm/cortex-a/: cpu.h  exc.h  reset.S
config/: config.h
drivers/: uart.h
kernel/include/: atomic.h  device.h  fatal.h  kernel.h  kernel_includes.h  spinlock.h  types.h  util_internal.h  util_macro.h
kernel/include/sys/: __assert.h  arch_interface.h  dlist.h  init.h  iterable_sections.h  printk.h
kernel/include/toolchain/: common.h  gcc.h  toolchain.h
kernel/source/: fatal.c  idle.c
lib/libc/minimal/include/: errno.h  string.h
lib/libc/minimal/source/string/: string.c
lib/libc/minimal/string/: strlen.c
lib/os/: assert.c  cbprintf_nano.c  printk.c
os/include/: atomic.h  atomic_builtin.h  device.h  fatal.h  fatal_types.h  kernel.h  kernel_includes.h  spinlock.h  types.h  util_internal.h  util_macro.h
os/include/kernel/: kernel_structs.h  ksched.h  sched_priq.h  thread.h  timeout_q.h  wait_q.h
os/include/sys/: __assert.h  cbprintf.h  dlist.h  init.h  iterable_sections.h  printk.h
os/include/toolchain/: common.h  gcc.h  toolchain.h
os/source/: fatal.c  idle.c  init.c  sched.c
syscalls/: sys_uart.c
